Handle timeout and dry run fake command execution time in helm chart
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -70,6 +70,10 @@ spec:
               value: '{{ $root.Values.dryRun }}'
             - name: SDS_DRY_RUN_CODE
               value: '{{ $root.Values.dryRunCode }}'
+            - name: SDS_DRY_RUN_SECONDS
+              value: '{{ $root.Values.dryRunSeconds }}'
+            - name: SDS_TIMEOUT_SECONDS
+              value: '{{ $root.Values.timeoutSeconds }}'
             - name: SDS_NODE_HASH
               value: '{{ $root.Values.nodeHash }}'
             - name: SDS_NODE_NUM
