Update helm chart to support n longesttasks number setting
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -58,6 +58,8 @@ spec:
       value: '{{ $root.Values.dryRunSeconds }}'
     - name: SDS_TIMEOUT_SECONDS
       value: '{{ $root.Values.timeoutSeconds }}'
+    - name: SDS_N_LONGEST
+      value: '{{ $root.Values.nLongest }}'
     - name: SDS_NODE_HASH
       value: '{{ $root.Values.nodeHash }}'
     - name: SDS_NODE_NUM
