--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -60,6 +60,8 @@ spec:
       value: '{{ $root.Values.timeoutSeconds }}'
     - name: SDS_N_LONGEST
       value: '{{ $root.Values.nLongest }}'
+    - name: SDS_SKIP_SH
+      value: '{{ $root.Values.skipSH }}'
     - name: SDS_NODE_HASH
       value: '{{ $root.Values.nodeHash }}'
     - name: SDS_NODE_NUM
