Handle setting p2o.py error size cut level
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -60,6 +60,8 @@ spec:
       value: '{{ $root.Values.timeoutSeconds }}'
     - name: SDS_N_LONGEST
       value: '{{ $root.Values.nLongest }}'
+    - name: SDS_STRIP_ERROR_SIZE
+      value: '{{ $root.Values.stripErrorSize }}'
     - name: SDS_SKIP_SH
       value: '{{ $root.Values.skipSH }}'
     - name: SDS_NODE_HASH
