--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -3,9 +3,9 @@
 {{- $skipSHSecret := .Values.skipSHSecret -}}
 {{ if not $skipSHSecret }}
 # SH secret starts
-{{- $shUser := or .Values.shUser (.Files.Get "secrets/SH_USER.secret") -}}
+{{- $shUser := or .Values.shUser (.Files.Get (printf "secrets/SH_USER.%s.secret" .Values.deployEnv)) -}}
 {{- $shHost := or .Values.shHost (.Files.Get (printf "secrets/SH_HOST.%s.secret" .Values.deployEnv)) -}}
-{{- $shPort := or .Values.shPort (.Files.Get "secrets/SH_PORT.secret") -}}
+{{- $shPort := or .Values.shPort (.Files.Get (printf "secrets/SH_PORT.%s.secret" .Values.deployEnv)) -}}
 {{- $shPass := or .Values.shPass (.Files.Get (printf "secrets/SH_PASS.%s.secret" .Values.deployEnv)) -}}
 {{- $shDB := or .Values.shDB (.Files.Get "secrets/SH_DB.secret") -}}
 {{ if and $shUser $shHost $shPort $shPass $shDB }}
@@ -39,7 +39,7 @@ missing_one_or_more_sh_secrets: "Please take a look at the NOTES.txt file"
 {{- $skipESSecret := .Values.skipESSecret -}}
 {{ if not $skipESSecret }}
 # ES secret starts
-{{- $esURL := or .Values.esURL (.Files.Get "secrets/ES_URL.secret") -}}
+{{- $esURL := or .Values.esURL (.Files.Get (printf "secrets/ES_URL.%s.secret" .Values.deployEnv)) -}}
 {{ if $esURL }}
 ---
 apiVersion: v1
