Handle per-env SH db
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -7,7 +7,7 @@
 {{- $shHost := or .Values.shHost (.Files.Get (printf "secrets/SH_HOST.%s.secret" .Values.deployEnv)) -}}
 {{- $shPort := or .Values.shPort (.Files.Get (printf "secrets/SH_PORT.%s.secret" .Values.deployEnv)) -}}
 {{- $shPass := or .Values.shPass (.Files.Get (printf "secrets/SH_PASS.%s.secret" .Values.deployEnv)) -}}
-{{- $shDB := or .Values.shDB (.Files.Get "secrets/SH_DB.secret") -}}
+{{- $shDB := or .Values.shDB (.Files.Get (printf "secrets/SH_DB.%s.secret" .Values.deployEnv)) -}}
 {{ if and $shUser $shHost $shPort $shPass $shDB }}
 ---
 apiVersion: v1
