--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -92,4 +92,32 @@ missing_zip_secret: "Please take a look at the NOTES.txt file"
 {{ end }}
 # ZIP secret ends
 {{ end }}
+{{- $skipRepoSecret := .Values.skipRepoSecret -}}
+{{ if not $skipRepoSecret }}
+# Repo access secret starts
+{{- $repoAccess := or .Values.repoAccess (.Files.Get "secrets/REPO_ACCESS.secret") -}}
+{{ if $repoAccess }}
+---
+apiVersion: v1
+data:
+  REPO_ACCESS.secret: {{ $repoAccess | b64enc }}
+kind: Secret
+metadata:
+  namespace: '{{ .Values.namespace }}'
+  name: {{ .Values.repoSecret }}
+  labels:
+    type: 'secret'
+{{- with .Values.labels -}}
+{{ toYaml . | nindent 4 }}
+{{ end }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+type: {{ .Values.secretType }}
+{{ else }}
+missing_repo_access_secret: "Please take a look at the NOTES.txt file"
+{{ end }}
+# Repo access secret ends
+{{ end }}
 {{ end }}
