Added support for dynamic fetching of all given user's or organization's GitHub repositories
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -118,6 +118,11 @@ spec:
         secretKeyRef:
           name: {{ $root.Values.esSecret }}
           key: ES_URL.secret
+    - name: SDS_GITHUB_OAUTH
+      valueFrom:
+        secretKeyRef:
+          name: {{ $root.Values.githubSecret }}
+          key: GITHUB_OAUTH.secret
     - name: ZIPPASS
       valueFrom:
         secretKeyRef:
