--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -120,4 +120,32 @@ missing_repo_access_secret: "Please take a look at the NOTES.txt file"
 {{ end }}
 # Repo access secret ends
 {{ end }}
+{{- $skipGithubSecret := .Values.skipGithubSecret -}}
+{{ if not $skipGithubSecret }}
+# GitHub secret starts
+{{- $githubOAuth := or .Values.githubOAuth (.Files.Get "secrets/GITHUB_OAUTH.secret") -}}
+{{ if $githubOAuth }}
+---
+apiVersion: v1
+data:
+  GITHUB_OAUTH.secret: {{ $githubOAuth | b64enc }}
+kind: Secret
+metadata:
+  namespace: '{{ .Values.namespace }}'
+  name: {{ .Values.githubSecret }}
+  labels:
+    type: 'secret'
+{{- with .Values.labels -}}
+{{ toYaml . | nindent 4 }}
+{{ end }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+type: {{ .Values.secretType }}
+{{ else }}
+missing_github_secret: "Please take a look at the NOTES.txt file"
+{{ end }}
+# GitHub secret ends
+{{ end }}
 {{ end }}
