Make dynamic repo fetch feature default
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -77,7 +77,7 @@ skipSH: ''
 stripErrorSize: ''
 esURL: ''
 esBulkSize: ''
-useRepoAccess: ''
+useRepoAccess: '1'
 concurrencyPolicy: Forbid
 fullnameOverride: sds
 imagePullPolicy: Always
