--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -86,6 +86,8 @@ spec:
       value: '{{ $root.Values.sdsSkipTime }}'
     - name: SDS_ES_BULKSIZE
       value: '{{ $root.Values.esBulkSize }}'
+    - name: SDS_LATEST_ITEMS
+      value: '{{ $root.Values.latestItems }}'
     - name: BRANCH
       value: '{{ $root.Values.deployEnv }}'
     - name: SH_USER
