Debug pods should have CSV prefix set
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -50,6 +50,8 @@ spec:
         cpu: '{{ $root.Values.limitsCPU }}'
 {{ end }}
     env:
+    - name: SDS_CSV_PREFIX
+      value: 'debug_jobs'
     - name: SDS_DRY_RUN
       value: '{{ $root.Values.dryRun }}'
     - name: SDS_DRY_RUN_CODE
