Adding support for silent mode and scroll wait parameters 3
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -90,6 +90,10 @@ spec:
       value: '{{ $root.Values.esBulkSize }}'
     - name: SDS_LATEST_ITEMS
       value: '{{ $root.Values.latestItems }}'
+    - name: SDS_SCROLL_WAIT
+      value: '{{ $root.Values.scrollWait }}'
+    - name: SDS_SILENT
+      value: '{{ $root.Values.silent }}'
     - name: BRANCH
       value: '{{ $root.Values.deployEnv }}'
     - name: SH_USER
