Support ES scroll size 2
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -106,6 +106,8 @@ spec:
               value: '{{ $root.Values.latestItems }}'
             - name: SDS_SCROLL_WAIT
               value: '{{ $root.Values.scrollWait }}'
+            - name: SDS_SCROLL_SIZE
+              value: '{{ $root.Values.scrollSize }}'
             - name: SDS_SILENT
               value: '{{ $root.Values.silent }}'
             - name: BRANCH
