Adding support for enriching historical affiliations 2
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -80,6 +80,10 @@ spec:
               value: '{{ $root.Values.stripErrorSize }}'
             - name: SDS_SKIP_SH
               value: '{{ $root.Values.skipSH }}'
+            - name: SDS_SKIP_DATA
+              value: '{{ $root.Values.skipData }}'
+            - name: SDS_SKIP_AFFS
+              value: '{{ $root.Values.skipAffs }}'
             - name: SDS_NODE_HASH
               value: '{{ $root.Values.nodeHash }}'
             - name: SDS_NODE_NUM
