--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -63,6 +63,8 @@
 # timeoutSeconds: '72000'
 # nLongest: '30'
 # skipSH: '1'
+# skipData: '1'
+# skipAffs: '1'
 # stripErrorSize: '4096'
 # useRepoAccess: ''
 # latestItems: ''
@@ -78,6 +80,8 @@ dryRunSeconds: ''
 timeoutSeconds: ''
 nLongest: ''
 skipSH: ''
+skipData: ''
+skipAffs: ''
 stripErrorSize: ''
 esURL: ''
 esBulkSize: ''
