Port is not supported by p2o.py, removed support in Helm chart
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -5,16 +5,14 @@
 # SH secret starts
 {{- $shUser := or .Values.shUser (.Files.Get (printf "secrets/SH_USER.%s.secret" .Values.deployEnv)) -}}
 {{- $shHost := or .Values.shHost (.Files.Get (printf "secrets/SH_HOST.%s.secret" .Values.deployEnv)) -}}
-{{- $shPort := or .Values.shPort (.Files.Get (printf "secrets/SH_PORT.%s.secret" .Values.deployEnv)) -}}
 {{- $shPass := or .Values.shPass (.Files.Get (printf "secrets/SH_PASS.%s.secret" .Values.deployEnv)) -}}
 {{- $shDB := or .Values.shDB (.Files.Get (printf "secrets/SH_DB.%s.secret" .Values.deployEnv)) -}}
-{{ if and $shUser $shHost $shPort $shPass $shDB }}
+{{ if and $shUser $shHost $shPass $shDB }}
 ---
 apiVersion: v1
 data:
   SH_USER.secret: {{ $shUser | b64enc }}
   SH_HOST.secret: {{ $shHost | b64enc }}
-  SH_PORT.secret: {{ $shPort | b64enc }}
   SH_PASS.secret: {{ $shPass | b64enc }}
   SH_DB.secret: {{ $shDB | b64enc }}
 kind: Secret
