Port is not supported by p2o.py, removed support in Helm chart 2
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -84,6 +84,8 @@ spec:
               value: '{{ $root.Values.skipData }}'
             - name: SDS_SKIP_AFFS
               value: '{{ $root.Values.skipAffs }}'
+            - name: SDS_SKIP_ALIASES
+              value: '{{ $root.Values.skipAliases }}'
             - name: SDS_NODE_HASH
               value: '{{ $root.Values.nodeHash }}'
             - name: SDS_NODE_NUM
