--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -64,6 +64,7 @@
 # skipSH: '1'
 # skipData: '1'
 # skipAffs: '1'
+# skipAliases: '1'
 # stripErrorSize: '4096'
 # useRepoAccess: ''
 # latestItems: ''
@@ -81,6 +82,7 @@ nLongest: ''
 skipSH: ''
 skipData: ''
 skipAffs: ''
+skipAliases: ''
 stripErrorSize: ''
 esURL: ''
 esBulkSize: ''
