--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -72,6 +72,10 @@ spec:
       value: '{{ $root.Values.skipAffs }}'
     - name: SDS_SKIP_ALIASES
       value: '{{ $root.Values.skipAliases }}'
+    - name: SDS_NO_MULTI_ALIASES
+      value: '{{ $root.Values.noMultiAliases }}'
+    - name: SDS_CLEANUP_ALIASES
+      value: '{{ $root.Values.cleanupAliases }}'
     - name: SDS_NODE_HASH
       value: '{{ $root.Values.nodeHash }}'
     - name: SDS_NODE_NUM
