--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -65,6 +65,7 @@
 # skipData: '1'
 # skipAffs: '1'
 # skipAliases: '1'
+# skipDropUnused: '1'
 # stripErrorSize: '4096'
 # useRepoAccess: ''
 # latestItems: ''
@@ -88,6 +89,7 @@ skipSH: ''
 skipData: ''
 skipAffs: ''
 skipAliases: ''
+skipDropUnused: ''
 noMultiAliases: ''
 cleanupAliases: ''
 stripErrorSize: ''
