Support skipEsData in the Helm chart
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -72,6 +72,7 @@
 # scrollWait: '30'
 # scrollSize: '10000'
 # skipCheckFreq: 'y'
+# skipEsData: 'y'
 # silent: 'y'
 # noMultiAliases: '1'
 # cleanupAliases: '1'
@@ -99,6 +100,7 @@ esBulkSize: ''
 scrollWait: ''
 scrollSize: ''
 skipCheckFreq: ''
+skipEsData: ''
 silent: ''
 useRepoAccess: '1'
 concurrencyPolicy: Forbid
