--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -82,6 +82,8 @@ spec:
               value: '{{ $root.Values.skipSH }}'
             - name: SDS_SKIP_DATA
               value: '{{ $root.Values.skipData }}'
+            - name: SDS_SKIP_ES_DATA
+              value: '{{ $root.Values.skipEsData }}'
             - name: SDS_SKIP_CHECK_FREQ
               value: '{{ $root.Values.skipCheckFreq }}'
             - name: SDS_SKIP_AFFS
