Add option to skip ES logs in Helm (which are not implemented yet)
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -84,6 +84,8 @@ spec:
               value: '{{ $root.Values.skipData }}'
             - name: SDS_SKIP_ES_DATA
               value: '{{ $root.Values.skipEsData }}'
+            - name: SDS_SKIP_ES_LOG
+              value: '{{ $root.Values.skipEsLog }}'
             - name: SDS_SKIP_CHECK_FREQ
               value: '{{ $root.Values.skipCheckFreq }}'
             - name: SDS_SKIP_AFFS
