--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -73,6 +73,7 @@
 # scrollSize: '10000'
 # skipCheckFreq: 'y'
 # skipEsData: 'y'
+# skipEsLog: 'y'
 # silent: 'y'
 # maxDeleteTrials: '5'
 # noMultiAliases: '1'
@@ -102,6 +103,7 @@ scrollWait: ''
 scrollSize: ''
 skipCheckFreq: ''
 skipEsData: ''
+skipEsLog: ''
 silent: ''
 maxDeleteTrials: ''
 useRepoAccess: '1'
