--- a/sources/Makefile
+++ b/sources/Makefile
@@ -15,7 +15,7 @@ GO_VET=go vet
 GO_CONST=goconst
 GO_IMPORTS=goimports -w
 GO_USEDEXPORTS=usedexports
-GO_ERRCHECK=errcheck -asserts -ignore '[FS]?[Pp]rint*'
+GO_ERRCHECK=errcheck -asserts -ignore '[FS]?[Pp]rint*' -ignoretests
 GO_TEST=go test
 BINARIES=syncdatasources
 STRIP=strip
