Support new env variables
Signed-off-by: John DA <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -66,14 +66,16 @@
 # skipAffs: '1'
 # skipAliases: '1'
 # skipDropUnused: '1'
+# skipDedup: '1'
+# skipproject: '1'
+# skipCheckFreq: 'y'
+# skipEsData: 'y'
+# skipEsLog: 'y'
 # stripErrorSize: '4096'
 # useRepoAccess: ''
 # latestItems: ''
 # scrollWait: '30'
 # scrollSize: '10000'
-# skipCheckFreq: 'y'
-# skipEsData: 'y'
-# skipEsLog: 'y'
 # silent: 'y'
 # maxDeleteTrials: '5'
 # noMultiAliases: '1'
@@ -94,6 +96,11 @@ skipData: ''
 skipAffs: ''
 skipAliases: ''
 skipDropUnused: ''
+skipCheckFreq: ''
+skipEsData: ''
+skipEsLog: ''
+skipDedup: ''
+skipProject: ''
 noMultiAliases: ''
 cleanupAliases: ''
 stripErrorSize: ''
@@ -101,9 +108,6 @@ esURL: ''
 esBulkSize: ''
 scrollWait: ''
 scrollSize: ''
-skipCheckFreq: ''
-skipEsData: ''
-skipEsLog: ''
 silent: ''
 maxDeleteTrials: ''
 useRepoAccess: '1'
