--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -92,6 +92,10 @@ spec:
               value: '{{ $root.Values.skipAffs }}'
             - name: SDS_SKIP_ALIASES
               value: '{{ $root.Values.skipAliases }}'
+            - name: SDS_SKIP_DEDUP
+              value: '{{ $root.Values.skipDedup }}'
+            - name: SDS_SKIP_PROJECT
+              value: '{{ $root.Values.skipProject }}'
             - name: SDS_NO_MULTI_ALIASES
               value: '{{ $root.Values.noMultiAliases }}'
             - name: SDS_CLEANUP_ALIASES
