Update node selector
Signed-off-by: lukaszgryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -144,3 +144,6 @@ debugPodName: 'sds-debug'
 debugCommand: '/bin/sleep'
 debugCommandArgs: ['36525d']
 debugImage: 'lukaszgryglicki/sync-data-sources'
+useNodeSelector: '1'
+nodeSelector:
+  lfda: grimoire
