--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -67,7 +67,8 @@
 # skipAliases: '1'
 # skipDropUnused: '1'
 # skipDedup: '1'
-# skipproject: '1'
+# skipProject: '1'
+# skipProjectTS: '1'
 # skipCheckFreq: 'y'
 # skipEsData: 'y'
 # skipEsLog: 'y'
@@ -101,6 +102,7 @@ skipEsData: ''
 skipEsLog: ''
 skipDedup: ''
 skipProject: ''
+skipProjectTS: ''
 noMultiAliases: ''
 cleanupAliases: ''
 stripErrorSize: ''
