--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -96,6 +96,8 @@ spec:
               value: '{{ $root.Values.skipDedup }}'
             - name: SDS_SKIP_PROJECT
               value: '{{ $root.Values.skipProject }}'
+            - name: SDS_SKIP_PROJECT_TS
+              value: '{{ $root.Values.skipProjectTS }}'
             - name: SDS_NO_MULTI_ALIASES
               value: '{{ $root.Values.noMultiAliases }}'
             - name: SDS_CLEANUP_ALIASES
