--- a/sources/Makefile
+++ b/sources/Makefile
@@ -52,10 +52,10 @@ test:
 check: fmt lint imports vet const usedexports errcheck
 
 install: check ${BINARIES}
-	${GO_INSTALL} ${GO_BIN_CMDS}
+	${GO_ENV} ${GO_INSTALL} ${GO_BIN_CMDS}
 
 dockerinstall: ${BINARIES}
-	${GO_INSTALL} ${GO_BIN_CMDS}
+	${GO_ENV} ${GO_INSTALL} ${GO_BIN_CMDS}
 
 strip: ${BINARIES}
 	${STRIP} ${BINARIES}
