Added skip validate GitHub user's/org's repos mode in SDS validation - no OAuth token is needed then and is faster, but will not detect if org is listed and then some repo from that org too in the same fixture
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -69,6 +69,7 @@
 # skipDedup: '1'
 # skipProject: '1'
 # skipProjectTS: '1'
+# skipValGitHubAPI: '1'
 # skipCheckFreq: 'y'
 # skipEsData: 'y'
 # skipEsLog: 'y'
@@ -104,6 +105,7 @@ skipEsLog: ''
 skipDedup: ''
 skipProject: ''
 skipProjectTS: ''
+skipValGitHubAPI: ''
 onlyValidate: ''
 noMultiAliases: ''
 cleanupAliases: ''
