--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -69,6 +69,7 @@
 # skipDedup: '1'
 # skipProject: '1'
 # skipProjectTS: '1'
+# skipSyncInfo: '1'
 # skipValGitHubAPI: '1'
 # skipCheckFreq: 'y'
 # skipEsData: 'y'
@@ -105,6 +106,7 @@ skipEsLog: ''
 skipDedup: ''
 skipProject: ''
 skipProjectTS: ''
+skipSyncInfo: ''
 skipValGitHubAPI: ''
 onlyValidate: ''
 noMultiAliases: ''
