--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -3,14 +3,17 @@
 {{- $skipSHSecret := .Values.skipSHSecret -}}
 {{ if not $skipSHSecret }}
 # SH secret starts
+{{- $ssawURL := or .Values.ssawURL (.Files.Get (printf "secrets/SSAW_URL.%s.secret" .Values.deployEnv)) -}}
 {{- $shUser := or .Values.shUser (.Files.Get (printf "secrets/SH_USER.%s.secret" .Values.deployEnv)) -}}
 {{- $shHost := or .Values.shHost (.Files.Get (printf "secrets/SH_HOST.%s.secret" .Values.deployEnv)) -}}
 {{- $shPass := or .Values.shPass (.Files.Get (printf "secrets/SH_PASS.%s.secret" .Values.deployEnv)) -}}
 {{- $shDB := or .Values.shDB (.Files.Get (printf "secrets/SH_DB.%s.secret" .Values.deployEnv)) -}}
+# we don not check for ssawURL presence - it can be empty
 {{ if and $shUser $shHost $shPass $shDB }}
 ---
 apiVersion: v1
 data:
+  SSAW_URL.secret: {{ $ssawUrl | b64enc }}
   SH_USER.secret: {{ $shUser | b64enc }}
   SH_HOST.secret: {{ $shHost | b64enc }}
   SH_PASS.secret: {{ $shPass | b64enc }}
