Adding skip sort by duration flag
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -71,6 +71,7 @@
 # skipProject: '1'
 # skipProjectTS: '1'
 # skipSyncInfo: '1'
+# skipSortDuration: '1'
 # skipValGitHubAPI: '1'
 # skipCheckFreq: 'y'
 # skipEsData: 'y'
@@ -108,6 +109,7 @@ skipDedup: ''
 skipProject: ''
 skipProjectTS: ''
 skipSyncInfo: ''
+skipSortDuration: ''
 skipValGitHubAPI: ''
 skipSSAW: ''
 onlyValidate: ''
