--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -88,6 +88,10 @@ spec:
       value: '{{ $root.Values.skipSyncInfo }}'
     - name: SDS_SKIP_VALIDATE_GITHUB_API
       value: '{{ $root.Values.skipValGitHubAPI }}'
+    - name: SDS_SKIP_SORT_DURATION
+      value: '{{ $root.Values.skipSortDuration }}'
+    - name: SDS_SKIP_SSAW
+      value: '{{ $root.Values.skipSSAW }}'
     - name: SDS_ONLY_VALIDATE
       value: '{{ $root.Values.onlyValidate }}'
     - name: SDS_NO_MULTI_ALIASES
@@ -132,8 +136,6 @@ spec:
       value: '{{ $root.Values.deployEnv }}'
     - name: SDS_SSAW_FREQ
       value: '{{ $root.Values.ssawFreq }}'
-    - name: SDS_SKIP_SSAW
-      value: '{{ $root.Values.skipSSAW }}'
     - name: SDS_SSAW_URL
       valueFrom:
         secretKeyRef:
