--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -100,6 +100,10 @@ spec:
               value: '{{ $root.Values.skipProjectTS }}'
             - name: SDS_SKIP_SYNC_INFO
               value: '{{ $root.Values.skipSyncInfo }}'
+            - name: SDS_SKIP_SSAW
+              value: '{{ $root.Values.skipSSAW }}'
+            - name: SDS_SKIP_SORT_DURATION
+              value: '{{ $root.Values.skipSortDuration }}'
             - name: SDS_SKIP_VALIDATE_GITHUB_API
               value: '{{ $root.Values.skipValGitHubAPI }}'
             - name: SDS_ONLY_VALIDATE
@@ -146,8 +150,6 @@ spec:
               value: '{{ $root.Values.deployEnv }}'
             - name: SDS_SSAW_FREQ
               value: '{{ $root.Values.ssawFreq }}'
-            - name: SDS_SKIP_SSAW
-              value: '{{ $root.Values.skipSSAW }}'
             - name: SDS_SSAW_URL
               valueFrom:
                 secretKeyRef:
