--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -60,6 +60,8 @@ spec:
       value: '{{ $root.Values.dryRunSeconds }}'
     - name: SDS_TIMEOUT_SECONDS
       value: '{{ $root.Values.timeoutSeconds }}'
+    - name: SDS_TASK_TIMEOUT_SECONDS
+      value: '{{ $root.Values.taskTimeoutSeconds }}'
     - name: SDS_N_LONGEST
       value: '{{ $root.Values.nLongest }}'
     - name: SDS_STRIP_ERROR_SIZE
