--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -13,7 +13,7 @@
 ---
 apiVersion: v1
 data:
-  SSAW_URL.secret: {{ $ssawUrl | b64enc }}
+  SSAW_URL.secret: {{ $ssawURL | b64enc }}
   SH_USER.secret: {{ $shUser | b64enc }}
   SH_HOST.secret: {{ $shHost | b64enc }}
   SH_PASS.secret: {{ $shPass | b64enc }}
