--- a/sources/example/devstats.yaml
+++ b/sources/example/devstats.yaml
@@ -1,20 +1,20 @@
 ---
-#disabled: true
 native:
   slug: devstats
 data_sources:
 - slug: git
-  endpoints:
-  - name: https://github.com/cncf
-    flags:
-      type: github_org
-    skip:
-    - '(?i)lf'
-    - '(?i)example'
-    only:
-    - '(?i)devstats'
-    - '(?i)gitdm'
+  projects:
+  - name: DevStats
+    endpoints:
+    - name: https://github.com/cncf
+      flags:
+        type: github_org
+      skip:
+      - '(?i)lf'
+      - '(?i)example'
+      only:
+      - '(?i)devstats'
+      - '(?i)gitdm'
   config:
   - name: from-date
     value: '2019-10-01'
-  index_suffix: '-for-merge'
