Adding support for only/skip P2O mode, skip fixtures/datasources/projects/endpoints RegExp mode, merge all profiles DA-affiliations API mode
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -63,6 +63,10 @@
 # datasourcesRE: '^git$'
 # projectsRE: '[nN]etwork'
 # endpointsRE: '\.gerrit\.'
+# fixturesSkipRE: '^lfn/.*'
+# datasourcesSkipRE: '^git$'
+# projectsSkipRE: '[nN]etwork'
+# endpointsSkipRE: '\.gerrit\.'
 # dryRun: '1'
 # dryRunCode: '4'
 # dryRunSeconds: '1'
@@ -80,11 +84,14 @@
 # skipProjectTS: '1'
 # skipSyncInfo: '1'
 # skipSortDuration: '1'
+# skipMerge: '1'
+# skipP2O: '1'
 # skipValGitHubAPI: '1'
 # skipCheckFreq: 'y'
 # skipEsData: 'y'
 # skipEsLog: 'y'
 # onlyValidate: '1'
+# onlyP2O: '1'
 # stripErrorSize: '4096'
 # useRepoAccess: ''
 # latestItems: ''
@@ -104,6 +111,10 @@ fixturesRE: ''
 datasourcesRE: ''
 projectsRE: ''
 endpointsRE: ''
+fixturesSkipRE: ''
+datasourcesSkipRE: ''
+projectsSkipRE: ''
+endpointsSkipRE: ''
 dryRun: ''
 dryRunCode: ''
 dryRunSeconds: ''
@@ -124,9 +135,12 @@ skipProject: ''
 skipProjectTS: ''
 skipSyncInfo: ''
 skipSortDuration: ''
+skipMerge: ''
+skipP2O: ''
 skipValGitHubAPI: ''
 skipSSAW: ''
 onlyValidate: ''
+onlyP2O: ''
 noMultiAliases: ''
 cleanupAliases: ''
 stripErrorSize: ''
