--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -74,6 +74,14 @@ spec:
               value: '{{ $root.Values.projectsRE }}'
             - name: SDS_ENDPOINTS_RE
               value: '{{ $root.Values.endpointsRE }}'
+            - name: SDS_FIXTURES_SKIP_RE
+              value: '{{ $root.Values.fixturesSkipRE }}'
+            - name: SDS_DATASOURCES_SKIP_RE
+              value: '{{ $root.Values.datasourcesSkipRE }}'
+            - name: SDS_PROJECTS_SKIP_RE
+              value: '{{ $root.Values.projectsSkipRE }}'
+            - name: SDS_ENDPOINTS_SKIP_RE
+              value: '{{ $root.Values.endpointsSkipRE }}'
             - name: SDS_DRY_RUN
               value: '{{ $root.Values.dryRun }}'
             - name: SDS_DRY_RUN_CODE
@@ -116,10 +124,16 @@ spec:
               value: '{{ $root.Values.skipSSAW }}'
             - name: SDS_SKIP_SORT_DURATION
               value: '{{ $root.Values.skipSortDuration }}'
+            - name: SDS_SKIP_MERGE
+              value: '{{ $root.Values.skipMerge }}'
+            - name: SDS_SKIP_P2O
+              value: '{{ $root.Values.skipP2O }}'
             - name: SDS_SKIP_VALIDATE_GITHUB_API
               value: '{{ $root.Values.skipValGitHubAPI }}'
             - name: SDS_ONLY_VALIDATE
               value: '{{ $root.Values.onlyValidate }}'
+            - name: SDS_ONLY_P2O
+              value: '{{ $root.Values.onlyP2O }}'
             - name: SDS_NO_MULTI_ALIASES
               value: '{{ $root.Values.noMultiAliases }}'
             - name: SDS_CLEANUP_ALIASES
